tests/baselines/reference/classMemberInitializerScoping2(target=es2017,usedefineforclassfields=true).errors.txt
classMemberInitializerScoping2.ts(3,9): error TS2301: Initializer of instance member variable 'p' cannot reference identifier 'x' declared in the constructor.


==== classMemberInitializerScoping2.ts (1 errors) ====
    const x = 1
    class C {
        p = x
            ~
!!! error TS2301: Initializer of instance member variable 'p' cannot reference identifier 'x' declared in the constructor.
        constructor(x: string) { }
    }
    